Fixed menu alignment issues
Added box-sizing: border-box; to every page.

--- a/health_style.css
+++ b/health_style.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
     font-family: 'ZCOOL XiaoWei', serif;
     background-color: #903CA0;
