--- a/products.css
+++ b/products.css
@@ -2,7 +2,7 @@
   margin: 0px;
   padding: 0px;
   font-family: 'ZCOOL XiaoWei', serif;
-
+  box-sizing: border-box;
 }
 
 body {
